footer developed & scrollbar changed & header fixed

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,28 @@
 .text-main-1{
     color: rgb(25, 25, 25);
 }
+.border-bottom-m-2{
+    border-bottom: solid 1px rgb(255, 59, 29);
+}
+.border-tpo-m-2{
+    border-top: 1px solid rgb(255, 59, 29);
+}
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(150, 150, 150);
+    border-radius: 6px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
